<resources>
    <string name="app_name">CleanApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="header_login">Sign In</string>
    <string name="header_description_login">Sign in to get all the feature of this app.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_text_login">SIGN IN</string>
    <string name="button_text_i_dont_have_account">I dont have account</string>
    <string name="error_password_not_valid">Password is not valid</string>
    <string name="error_email_not_valid">Email is not valid</string>
    <string name="button_text_back">GO BACK</string>
    <string name="header_register">Create account</string>
    <string name="header_description_register">Create a new account to get all the feature of the app</string>
</resources>